--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 # h2 DB, ? ?? ?? ??
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+
+# JPA ?? ??
+# ??? ??? ?? ??
+logging.level.org.hibernate.SQL=DEBUG
+# ??? ????
+spring.jpa.properties.hibernate.format_sql=true
+# ??? ????
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# DB URL ?? ??
+# ??? URL ?? X
+spring.datasource.generate-unique-name=false
+# ?? URL ??
+spring.datasource.url=jdbc:h2:mem:testdb
