--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+	// PostgreSQL 드라이버 추가!
+	runtimeOnly 'org.postgresql:postgresql'
+
 	// 롬복 추가!
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
