--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,26 @@
-# h2 DB, ? ?? ?? ??
+# h2 DB, \uC6F9 \uCF58\uC194 \uC811\uADFC \uD5C8\uC6A9
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
-# JPA ?? ??
-# ??? ??? ?? ??
+# JPA \uB85C\uAE45 \uC124\uC815
+# \uB514\uBC84\uADF8 \uB808\uBCA8\uB85C \uCFFC\uB9AC \uCD9C\uB825
 logging.level.org.hibernate.SQL=DEBUG
-# ??? ????
+# \uC774\uC058\uAC8C \uBCF4\uC5EC\uC8FC\uAE30
 spring.jpa.properties.hibernate.format_sql=true
-# ??? ????
+# \uD30C\uB77C\uBBF8\uD130 \uBCF4\uC5EC\uC8FC\uAE30
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# DB URL ?? ??
-# ??? URL ?? X
+# DB URL \uACE0\uC815 \uC124\uC815
+# \uC720\uB2C8\uD06C URL \uC0DD\uC131 X
 spring.datasource.generate-unique-name=false
-# ?? URL ??
-spring.datasource.url=jdbc:h2:mem:testdb
+# \uACE0\uC815 URL \uC124\uC815
+# spring.datasource.url=jdbc:h2:mem:testdb  \uB514\uBE44\uB97C \uBCC0\uACBD\uD558\uC5EC \uC0AC\uC6A9 x
+
+# PostgreSQL \uC5F0\uB3D9
+spring.datasource.url=jdbc:postgresql://localhost:5432/clonequizlet_db
+spring.datasource.username=postgres
+spring.datasource.password=0528
+
+spring.datasource.data=classpath:/data.sql
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=update
