--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # \uC720\uB2C8\uD06C URL \uC0DD\uC131 X
 spring.datasource.generate-unique-name=false
 # \uACE0\uC815 URL \uC124\uC815
-spring.datasource.url=jdbc:h2:mem:testdb  
+spring.datasource.url=jdbc:h2:mem:testdb;
 # \uB514\uBE44\uB97C \uBCC0\uACBD\uD558\uC5EC \uC0AC\uC6A9 x
+
+# csrf \uD1A0\uD070\uC744 mustache \uC5D0\uC11C \uC0AC\uC6A9\uD558\uAE30 \uC704\uD55C \uC124\uC815
+spring.mustache.expose-request-attributes=true
 
 # PostgreSQL \uC5F0\uB3D9
 #spring.datasource.url=jdbc:postgresql://localhost:5432/clonequizlet_db
@@ -25,3 +28,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.data=classpath:/data.sql
 #spring.datasource.initialization-mode=never
 #spring.jpa.hibernate.ddl-auto=update
+
+server.context-path=/demo
