--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.datasource.url=jdbc:h2:mem:testdb;
 # csrf \uD1A0\uD070\uC744 mustache \uC5D0\uC11C \uC0AC\uC6A9\uD558\uAE30 \uC704\uD55C \uC124\uC815
 spring.mustache.expose-request-attributes=true
 
+# \uC138\uC158\uC5D0 \uB2F4\uAE34 \uB370\uC774\uD130\uB97C \uBAA8\uB378\uC5D0 \uB2F4\uC544\uC11C template \uC5D4\uC9C4\uC73C\uB85C \uC804\uB2EC
+spring.mustache.expose-session-attributes=true
+
 # PostgreSQL \uC5F0\uB3D9
 #spring.datasource.url=jdbc:postgresql://localhost:5432/clonequizlet_db
 #spring.datasource.username=postgres
