--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.mustache.expose-request-attributes=true
 # \uC138\uC158\uC5D0 \uB2F4\uAE34 \uB370\uC774\uD130\uB97C \uBAA8\uB378\uC5D0 \uB2F4\uC544\uC11C template \uC5D4\uC9C4\uC73C\uB85C \uC804\uB2EC
 spring.mustache.expose-session-attributes=true
 
+# OAUTH
+#spring.profiles.include=oauth
+
 # PostgreSQL \uC5F0\uB3D9
 #spring.datasource.url=jdbc:postgresql://localhost:5432/clonequizlet_db
 #spring.datasource.username=postgres
@@ -32,4 +35,15 @@ spring.mustache.expose-session-attributes=true
 #spring.datasource.initialization-mode=never
 #spring.jpa.hibernate.ddl-auto=update
 
-server.context-path=/demo
+#server.context-path=/demo
+
+# MYSQL DATABASE SETTING
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/QUIZLET?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=0528
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+
