--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-.xml
+orm.xml
 application.properties
-.sql
+data.sql
 
 ### STS ###
 .apt_generated
